--- a/Lab2/NIC-Preprocessor.ipynb
+++ b/Lab2/NIC-Preprocessor.ipynb
@@ -131,16 +131,9 @@
     }
    ],
    "source": [
-    "my_data = pk.load( open( \"full_image_descriptions.pkl\", \"rb\" ) )\n",
-    "print(my_data)"
+    "#my_data = pk.load( open( \"full_image_descriptions.pkl\", \"rb\" ) )\n",
+    "#print(my_data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
